<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:background="@drawable/triviathor_background"
    android:layout_gravity="center" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_marginTop="70dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/txv_welcome"
                android:textColor="#FFFFFF"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:text="" />

            <Button
                android:id="@+id/btn_singlePlayer"
                android:textColor="#FFFFFF"
                android:layout_gravity="center_horizontal"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/single_player"
                android:visibility="gone" />

            <Button
                android:id="@+id/btn_multiplayer"
                android:textColor="#FFFFFF"
                android:layout_gravity="center_horizontal"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/multiplayer" 
                android:visibility="gone"/>

            <Button
                android:id="@+id/btn_topScores"
                android:textColor="#FFFFFF"
                android:layout_gravity="center_horizontal"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/top_scores" 
                android:visibility="gone"/>

            <Button
                android:id="@+id/btn_options"
                android:textColor="#FFFFFF"
                android:layout_gravity="center_horizontal"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/options"
                android:visibility="gone" />

            <Button
                android:id="@+id/btn_logOut"
                android:textColor="#FFFFFF"
                android:layout_gravity="center_horizontal"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/exit" 
                android:visibility="gone"/>

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/btn_login"
        android:textColor="#FFFFFF"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:text="@string/log_in" />

    <TextView
        android:id="@+id/textView1"
        android:textColor="#FFFFFF"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:text="@string/connect_using_facebook"
        android:textAppearance="?android:attr/textAppearanceSmall" />

</LinearLayout>